--- a/src/components/blog/BlogContent.astro
+++ b/src/components/blog/BlogContent.astro
@@ -21,7 +21,7 @@ const { formatedDate, tldr } = Astro.props;
                     <p class="text-2xl lg:text-3xl mb-5 text-wuul-purp">
                         TL;DR
                     </p>
-                    <p>
+                    <p class="text-lg">
                         {tldr}
                     </p>
                 </div>
