--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -4,9 +4,9 @@ import PageTitleBlock from "../components/PageTitleBlock.astro"
 import BrandImg from "../components/branding/BrandImg.astro";
 import BlogContent from "../components/blog/BlogContent.astro";
 import Nav from "../components/Nav.astro";
+import TableOfContents from "../components/blog/toc/TableOfContents.astro";
 
 import { blogRoutes } from "../routes/routes.metadata";
-import TableOfContents from "../components/blog/toc/TableOfContents.astro";
 const { frontmatter, headings } = Astro.props;
 const formatedDate = moment(frontmatter.date).format("MMMM D, YYYY");
 ---
@@ -34,7 +34,9 @@ const formatedDate = moment(frontmatter.date).format("MMMM D, YYYY");
 		<section class="grid grid-cols-1 mx-2 md:grid-cols-5">
 			<div class="hidden md:block col-span-1"></div>
 			<div class="col-span-1 md:col-span-3">
-				<BlogContent formatedDate={formatedDate} tldr={frontmatter.tldr}/>
+				<BlogContent formatedDate={formatedDate} tldr={frontmatter.tldr}>
+					<slot/>
+				</BlogContent>
 			</div>
 			<!-- this will render the heading table of contents. -->
 			<div class="hidden lg:block mt-5 col-span-1">
