--- a/src/components/blog/Prose.astro
+++ b/src/components/blog/Prose.astro
@@ -1,6 +1,6 @@
 <!-- this Prose component is going to wrap the markdown content -->
 <div class="
-    prose prose-headings:font-main prose-headings:font-medium prose-p:font-sub prose-p:text-base
+    prose prose-headings:font-main prose-headings:text-wuul-purp prose-headings:font-medium prose-p:font-sub prose-p:text-base
     prose-headings:text-wuul-main propse-p:text-wuul-main
 ">
     <slot/>
