fixing the slugs and swapping from blogs -> blog

--- a/src/components/blog/BlogCard.astro
+++ b/src/components/blog/BlogCard.astro
@@ -6,7 +6,7 @@ const { slug } = Astro.props;
 ---
 <div class="container container-hover mx-auto border-solid border-b-2 border-wuul-main h-64 md:h-30 md:ml-4">
 	<div>
-		<a href={`/blogs/${slug}`}>
+		<a href={`/blog/${slug}`}>
 			<div class="text-xl lg:text-2xl font-main flex mt-1 p-2">
 				<slot name="blog-card-header"/>
 			</div>
